# qa-automation-framework

./: .gitignore  README.md
python-playwright/: README.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
python-playwright/src/configurations/: configuration_loader.py  dev.json
python-playwright/src/core/: base_page.py  base_test.py
python-playwright/src/pages/: page_ab_test.py  page_add_remove_elements.py  page_basic_auth.py  page_broken_images.py  page_challenging_dom.py  page_checkboxes.py  page_context_menu.py  page_digest_authentication.py  page_disappearing_elements.py  page_drag_drop.py  page_dropdown.py  page_dynamic_content.py  page_dynamic_controls.py  (+24 more)
python-playwright/tests/: test_ab_test.py  test_add_remove_elements.py  test_basic_auth.py  test_broken_images.py  test_challenging_dom.py  test_checkboxes.py  test_context_menu.py  test_digest_authentication.py  test_disappearing_elements.py  test_drag_drop.py  test_dropdown.py  test_dynamic_content.py  test_dynamic_controls.py  test_dynamic_elements.py  test_entry_ad.py  test_file_download.py  test_file_upload.py  test_floating_menu.py  test_forgot_password.py  test_form_authentication_multi_user.py  test_frame_inline.py  test_frame_nested.py  test_geolocation.py  test_horizontal_slider.py  test_hover.py  test_infinite_scroll.py  test_inputs.py  test_jquery_ui.py  test_js_alerts.py  test_js_error.py  test_key_press.py  test_large_deep_dom.py  test_new_window.py  test_redirection.py  test_sample.py  test_secure_download.py  test_shadow_dom.py  test_shifting_content_menu.py
(+348 files in other folders)
