[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "tb-playwright-python-framework"
version = "0.1.0"
description = "TechBytes Playwright Python framework with POM, Allure, retries, parallel execution, and environment switching"
readme = "README.md"
requires-python = ">=3.14.3"
[tool.pytest.ini_options]
pythonpath = ["."]
